--- a/car.html
+++ b/car.html
@@ -11,6 +11,9 @@
     <button class="but" id="but1" onclick="newcar()">Купити</button>
     <button class="but" id="but2" onclick="trade()">Торгуватись</button>
     <!--comment-->
+        <!--comment-->
+        <!--comment-->
+        <!--comment-->
     <script src="car.js"></script>
 </body>
 </html>
