--- a/car.html
+++ b/car.html
@@ -10,6 +10,7 @@
     <p class="para">Price</p>
     <button class="but" id="but1" onclick="newcar()">Купити</button>
     <button class="but" id="but2" onclick="trade()">Торгуватись</button>
+    <p>Hello comrades</p>
     <!--comment-->
         <!--comment-->
         <!--comment-->
