--- a/car.html
+++ b/car.html
@@ -9,14 +9,13 @@
 </head>
 
 <body>
-
-    <body>
+    <nav class="ttt">РАЗОМ <span class="tt2">ДО </span>ПЕРЕМОГИ</nav>
         <div class="all">
             <div class="bacgr">
-                <img src="1.png" alt="">
+                <img src="/img/1.png" alt="">
             </div>
             <div class="corobka">
-                <img src="2.svg" alt="" srcset="" class="svg">
+                <img src="/img/2.svg" alt="" srcset="" class="svg">
                 <div class="text">
                     КИЇВ НЕ ЗДОЛАТИ!<br>
                     МИ ПЕРЕМОЖЕМО!<br>
@@ -28,7 +27,7 @@
         </div>
         <h1 class="t">ВСЕ БУДЕ УКРАЇНА</h1>
         <img class="pp"
-            src="png-transparent-ukraine-flag-heart-country-nation-europe-ukrainian-flag-symbol-removebg-preview 1.png">
+            src="/img/png-transparent-ukraine-flag-heart-country-nation-europe-ukrainian-flag-symbol-removebg-preview 1.png">
         <input class="block" type="button" value="Підтримай батьківщину">
 
         <div class="blockye">
